
    o	data.frame() and its replacement methods remove the names from
	vector columns.  Using I() will ensure that names are
	preserved.

    o	Indexing a vector by a character vector was slow if both the
	vector and index were long (say 10,000).  Now hashing is used
	and the time should be linear in the longer of the lengths
	(but more memory is used).


UTILITIES




C-LEVEL FACILITIES

    o   The header Rmath.h contains a definition for R_VERSION_STRING
        which can be used to track different versions of R and libRmath.

    o   The Makefile in src/nmath/standalone now has 'install' and
	'uninstall' targets -- see the README file in that directory.


DEPRECATED & DEFUNCT

    o	La.eigen(), tetragamma(), pentagamma(), package.contents() and
	package.description() are defunct.

    o	The undocumented function newestVersion() is no longer exported
	from package utils.  (Mainly because it was not completely general.)

    o	If --enable-R-shlib is specified, a copy of libR is still
	installed in $R_HOME/bin, but this will be removed in the near
	future.  Use that in R_HOME/lib instead.


INSTALLATION CHANGES

    o	Arithmetic supporting +/-Inf, NaNs and the IEC 60559 (aka
	IEEE 754) standard is now required -- the partial and often
	untested support for more limited arithmetic has been withdrawn.

	The C99 macro isfinite is used in preference to finite if available
	(and its correct functioning is checked at configure time).

    o	The dynamic libraries libR and libRlapack are now installed in
	R_HOME/lib rather than R_HOME/bin.

    o	When --enable-R-shlib is specified, the R executable is now
	a small executable linked against libR: see the R-admin
	manual for further discussion.  The 'extra' libraries bzip2,
	pcre, xdr and zlib are now only compiled in a way that allows
	the code to be included in a shared library if this option is
	specified, which might improve performance when it is not.
